Prevent the example text from wrapping
By adding ... when there is no more room, we focus more on the size
rather than the content. But I like your opinion about that.

And this is feature parity from script.js! Now on to refactoring that
script-new.js file a bit to make it more clean.

--- a/resources/components/value-readout.css
+++ b/resources/components/value-readout.css
@@ -1,4 +1,12 @@
+.value-readout {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .value-readout::after {
+  position: absolute;
   margin-left: 1rem;
   padding: 0 0.5rem;
   vertical-align: top;
